--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=your_server_name;Database=Final_DMAWS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=YOUR_SERVER;Database=Final_DMAWS;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,7 +9,4 @@
     }
   },
   "AllowedHosts": "*"
-
-
 }
-
